frontend/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


.footer {
  max-width: 100%;
  box-sizing: border-box;
  padding: 0;
  background-image: radial-gradient(at 30% top, #031d33 0%, rgba(3,37,65) 70%);
  background-position: center top;
  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  flex-wrap: wrap;
  align-content: space-between;
  justify-content: center;
}

.footer nav {
  display: flex;
  padding-top: 80px;
  padding-bottom: 80px;
  color: #fff;
}

.footer nav div {
  margin-right: 40px;
  min-width: 0;
  box-sizing: border-box;
}

.footer nav a.rounded {
  position: relative;
  top: 140px;
  border-color: #fff;
  background-color: #fff;
  color: rgba(3,37,65);
  font-size: 1.3em;
  font-weight: bold;
  display: inline-block;
  word-wrap: break-word;
  white-space: normal;
  text-transform: uppercase;
}

.color-change {
  background-image: radial-gradient(at 30% top, #031d33 0%, rgba(3,37,65) 70%);
  color: #fff !important;
}

.nav-dropdown{
  color:white;
  font-weight: bold;
  background-color : white;
}

.navbar,
.navbar-default{
  color:white;

}

form a {
  color: #3498db;
  text-decoration: none;
}

form a:hover {
  color: #3498db;
  text-decoration: underline;
}

.card {
  width: 258px;
  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
  border: 1px solid rgba(227,227,227);
  background-color: #fff;
}
.card .row-1 {
  background-color: #3498db;
  color: white;
  padding: 20px;
  font-weight: 600;
}

.card .row-2 {
  padding: 8px 0;
}

.card div.row-2 div {
  display: flex;
  justify-content: right;
}

.card .row-2 div:hover {
  background-color: rgb(128, 128, 128, 0.1);
}

.card div.row-2 div span:first-of-type {
  text-align: right;
  padding-right: 8px;
}

.card div.row-2 div span:last-of-type {
  width: 85%;
}

.column-wrapper {
  display: flex;
}

.register {
  padding-left: 30px;
}

